kubernetes/manifests/infrastructure/ingress-routes/console.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: console
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`console.$DOMAIN`)
      kind: Rule
      services:
        - name: console
          port: 3000
