kubernetes/manifests/infrastructure/ingress-routes/grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.console.$DOMAIN`)
      kind: Rule
      # We omit basic auth here as it interferes with Grafana's login
      services:
        - name: loki-stack-grafana
          port: 80
