kubernetes/manifests/infrastructure/ingress-routes/minio-admin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-admin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio.console.$DOMAIN`)
      kind: Rule
      middlewares:
        - name: console-auth
      services:
        - name: minio
          port: 9001
