kubernetes/manifests/infrastructure/ingress-routes/minio.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`s3.$DOMAIN`)
      kind: Rule
      services:
        - name: minio
          port: 9000
