kubernetes/manifests/infrastructure/ingress-routes/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.console.$DOMAIN`)
      kind: Rule
      middlewares:
        - name: console-auth
      services:
        - name: api@internal
          kind: TraefikService
